fixes broken tests and skips unstable ones